# s3geo

./: .env.example  .gitignore  README.md  docker-compose.yaml  index.html
backend/: .gitignore  README.md  audit_for_debug.sh  audit_for_debug_v2.sh  audit_for_debug_v3.sh  audit_status_planning.sh  bridge_regression.diff  pyproject.toml
backend/api/: main.py  support.py
backend/audit/: kernel_execution_bridge.py.txt  kernel_plan_adapter.py.txt  kernel_plan_grep.txt  nearest_neighbor_inspect_signature.txt  nearest_neighbor_signature.txt  op_catalog.py.txt  planner.py.txt  query_execution_service_planning_block.txt  role_bindings_grep.txt  runtime_paths.txt  spatial_nearest_grep.txt
backend/config/: plugin_state.json
backend/frontend_handoff/: api_paths.md  openapi.json
backend/geochat_kernel/: __init__.py
backend/geochat_sdk/: __init__.py  decorators.py  exceptions.py  plugin.py
backend/orchestrator/: __init__.py  audit.py  capability_registry.py  capability_router.py  capability_scoring.py  data_source_service.py  error_contract.py  feedback.py  feedback_proposal_service.py  input_error_mapping.py  input_reference_resolver.py  kernel_artifacts.py  learning_signals.py  llm_client.py  llm_gate.py  llm_intent_planner.py  loader_plugin_contract.py  map_layer_service.py  map_layers.py  models.py  natural_query_runner.py  output_service.py  output_storage.py  pipeline_executor.py  plan_builder.py  plugin_config_store.py  plugin_error_mapping.py  plugin_modules.py  plugin_runtime_service.py  plugin_state.py  production_response.py  project_service.py  (+20 more)
(+473 files in other folders)
